Added  meta description

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     Maor Azoulay | Full-Stack Developer
   </title>
 
-  <meta name="description" content="Add small description of yourslef.">
+  <meta name="description" content="Mid-level Full-Stack Developer based in Miami, FL">
   <!-- Add some coding keywords below, Ex: (React, CSS etc) -->
   <meta name="keywords" content="Maor Azoulay, Full-Stack NextJs React NextAuthJs HTML CSS TailwindCSS" />
   <link rel="stylesheet" href="index.css" />
